MDL-72667 lesson: improve colour contrast of correct text

--- a/theme/boost/scss/moodle/core.scss
+++ b/theme/boost/scss/moodle/core.scss
@@ -228,7 +228,7 @@ button.close,
 }
 
 .highlight {
-    color: map-get($theme-colors, 'info');
+    color: #007c90;
 }
 
 .fitem.advanced .text-info {
