--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -10076,7 +10076,7 @@ button.close:focus:hover,
   color: #357a32; }
 
 .highlight {
-  color: #008196; }
+  color: #007c90; }
 
 .fitem.advanced .text-info {
   font-weight: bold; }
